Allow non uuid as resource_id
